Set default piecemeal gap to 80% of viewport height. Fix margin/padding relationship inside piecemeal content. Fix transparencies across all scrims. Restore scrim on (richtext) cover image.

--- a/src/app/components/Caption/_index.scss
+++ b/src/app/components/Caption/_index.scss
@@ -22,7 +22,7 @@
   .u-richtext-invert & {
     padding-left: $layout-fluid-padding;
     padding-right: $layout-fluid-padding;
-    background-color: $color-black-transparent-50;
+    background-color: $color-black-transparent-60;
     color: $color-white;
 
     @media #{$mq-lg} {
