--- a/src/app/components/Cover/_index.scss
+++ b/src/app/components/Cover/_index.scss
@@ -81,14 +81,14 @@
     background-image: $gradient-vertical-40-0-80-60;
   }
 
-  .is-richtext & *::after {
+  .is-richtext &::after {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: $color-black-transparent-40;
+    background-color: $color-black-transparent-30;
   }
 
   @media #{$mq-lg} {
@@ -101,7 +101,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: $gradient-horizontal-45-40-65-0;
+      background-image: $gradient-horizontal-40-45-65-0;
     }
 
     .is-right &::after {
@@ -111,7 +111,7 @@
     .is-left & *::after,
     .is-right & *::after {
       background-color: transparent;
-      background-image: $gradient-vertical-50-0-100-50;
+      background-image: $gradient-vertical-50-0-100-60;
     }
   }
 
@@ -134,8 +134,15 @@
   z-index: 1;
 
   .is-richtext > & {
-    padding-top: 5rem;
-    padding-bottom: 2.75rem;
+
+    &:nth-child(2):last-child {
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+
+      & > :last-child {
+        margin-bottom: 0;
+      }
+    }
 
     &::before {
       content: "";
@@ -146,7 +153,7 @@
       transform: translateX(-50%);
       width: calc(#{cells(10)} + .75rem);
       height: 100%;
-      background-color: $color-black-transparent-10;
+      background-color: $color-black-transparent-30;
 
       @media #{$mq-md} {
         width: calc(#{cells(10)} + 1.75rem);
@@ -165,25 +172,30 @@
   }
 
   .is-piecemeal > & {
-    margin-top: 50vh;
-    margin-bottom: 50vh;
+    margin-top: 40vh;
+    margin-bottom: 40vh;
     padding-top: 1.5rem;
-    padding-bottom: 0;
+    padding-bottom: 1.5rem;;
 
     @media #{$mq-lg} {
       padding-top: 2.25rem;
+      padding-bottom: 2.25rem;
     }
 
     &:nth-child(2) {
-      margin-top: 100vh;
+      margin-top: 80vh;
     }
 
     &:last-child {
-      margin-bottom: 100vh;
+      margin-bottom: 80vh;
     }
 
     &::before {
       background-color: $color-black-transparent-60;
+    }
+
+    & > * {
+      margin-bottom: 0;
     }
 
     & > h4,
