--- a/src/app/components/Gallery/_index.scss
+++ b/src/app/components/Gallery/_index.scss
@@ -209,7 +209,7 @@
     margin-left: 0;
     max-width: calc(100% - .25rem);
     min-height: 0;
-    background-color: $color-black-transparent-50;
+    background-color: $color-black-transparent-60;
     color: $color-grey-50;
     pointer-events: none;
 
