--- a/src/app/components/Header/_index.scss
+++ b/src/app/components/Header/_index.scss
@@ -73,7 +73,7 @@
 
   .is-layered > & {
     margin-top: 16rem;
-    background-image: $gradient-vertical-0-43-100-75;
+    background-image: $gradient-vertical-0-45-100-75;
 
     @media #{$mq-md} {
       margin-top: 22rem;
